ArrowInventory/ArrowInventory/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
    font-family: "Roboto Slab", serif;

}

[data-bs-theme="login"] {
    --bs-body-bg: #D7DBDF;
    --bs-body-bg-rgb: 215, 219, 223;
    --bs-tertiary-bg: #BEC4CB;
    --bs-tertiary-bg-rgb: 190, 196, 203;
}

    [data-bs-theme="login"] body {
        background: linear-gradient(120deg, #BEC4CB 0%, #223D2C 50%, #B6B4B8 50%);
        background-attachment: fixed;
        color: #1E2A3A;
    }


[data-bs-theme="light"] {
    --bs-body-bg: #D7DBDF;
    --bs-body-bg-rgb: 215, 219, 223;
    --bs-tertiary-bg: #BEC4CB;
    --bs-tertiary-bg-rgb: 190, 196, 203;
}

[data-bs-theme="light"] body {
    background: linear-gradient(135deg, #BEC4CB 0%, #D7DBDF 80%, #B6B4B8 100%);
    background-attachment: fixed;
    color: #1E2A3A;
}

[data-bs-theme="light"] .card {
    border-radius: 12px;
    box-shadow: 0 2px 2px rgba( 30, 42, 58, 0.3);
    border: none !important;
}

[data-bs-theme="dark"] {
    --bs-body-bg: #1a1d21;
    --bs-body-bg-rgb: 26, 29, 33;
}

[data-bs-theme="dark"] body {
    background: linear-gradient(135deg, #1a1d21 0%, #212529 50%, #1a1d21 100%);
    background-attachment: fixed;
}

[data-bs-theme="dark"] .card {

    border-radius: 12px;
    box-shadow: 0 2px 2px rgba( 215, 219, 223, 0.3);
    border: none !important;

}

.navbar {
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);

}

header {
    position: sticky;
    top: 0;
    z-index: 1030;
}

.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
  color: var(--bs-secondary-color);
  text-align: end;
}

.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
  text-align: start;
}

.sortable-th {
    cursor: pointer;
    width: 135px;
    position: relative;
}

.sortable-icon {
    position: absolute;
    top: 2px;
    right: 4px;
    font-size: 14px;
}

.wrap-text {
    word-break: break-word;
    white-space: normal;
}

#themeIcon {
    font-size: 2rem;
}
/* Sidebar layout*/

#wrapper {
    min-height: 100vh;
}

#sidebar {
    min-height: 100vh;
    height: 100vh;
    position: sticky;
    top: 0;
    display: flex;
    flex-direction: column;
    transition: width 0.3s ease;
    background: linear-gradient(180deg, rgba(33, 37, 41, 0.95), rgba(50, 55, 60, 0.90));
    backdrop-filter: blur(12px);
}

.sidebar-expanded{
    width: 190px;
}

.sidebar-collapsed{
    width: 65px;
}

.sidebar-collapsed .sidebar-text,
.sidebar-collapsed .sidebar-brand-text {
    display: none;
}

.sidebar-collapsed .sidebar-header{
    justify-content: center !important;
}

.sidebar-collapsed .sidebar-footer{
    align-items: center;
}

.sidebar-collapsed .sidebar-footer button,
.sidebar-collapsed .sidebar-footer form,
.sidebar-collapsed .sidebar-footer from button{
    justify-content: center;
    padding: 10px 0;
}


.sidebar-collapsed #themeToggle{
    justify-content: center;
    padding: 10px 0;
    width: 100%;
}

.sidebar-collapsed .sidebar-brand img{
    display: none;
    
}

.sidebar-link {
    display: flex;
    align-items:center;
    gap: 10px;
    color: rgba(255, 255, 255, 0.75);
    border-radius: 8px;
    padding: 10px 12px;
    transition: background 0.2s, color 0.2s;
    white-space: nowrap;
}

.sidebar-icon{
    font-size: 22px;
    min-width: 22px;
}

.sidebar-brand{
    color:white;
}

.sidebar-brand:hover{
    color: rgba(255,255,255,0.8);
}

.sidebar-divider{
    border-color: rgba(255,255,255,0.1);
}

.sidebar-toggle-btn{
    color: rgba(255,255,255,0.75);
    border: none;
    background: transparent;
}

.sidebar-toggle-btn:hover{
    color: white;
}

#sidebarToggle:focus,
#themeToggle:focus{
    box-shadow: none !important;
    outline: none !important;
}

.sidebar-footer{
    margin-top: auto;
}

#page-content{
    overflow-x: auto;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

#page-content main{
    flex: 1;
}

.stat-number{
    font-size: 2.5rem;
    font-weight: 700;
}

.stat-card-devices {
    border-top: 4px solid #3b82f6 !important;
}

.stat-card-vms {
    border-top: 4px solid #10b981 !important;
}

.stat-card-physical {
    border-top: 4px solid #f59e08 !important;
}

.dropdown-item {
    display: flex;
    align-items: center;
    gap: 8px;
}

.modal {
    position: fixed !important;
}

.sidebar-footer button.sidebar-link
{
    background: none;
    border: none;
    width: 100%;
}

.table-responsive {
    overflow-x:auto;
    overflow-y:visible;
}

